2012-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Glossary). Correct the full name for `ISO' per
	bug report from William Bresler <wbresler@acm.org>. Add a link
	to the ISO website.

2012-09-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi (Nextfile Statement): Document that it's now part of POSIX
	and update the title.
	(Delete): Document that `delete array' is now part of POSIX.
	* awkcard.in: Adjust coloring for nextfile and delete array.

2012-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Updated to version 2012-09-05.06.

2012-08-27         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Minor edits, fix some spelling mistakes.

2012-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: More edits to chapter on arithmetic.
	Primarily English changes.

2012-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Emphasize more that floating point behavior is
	not a language issue. Add a pointer to POSIX bc.
	Move arithmetic chapter to later in the book, before chapter
	on dynamic extensions.

2012-08-17         Arnold D. Robbins     <arnold@skeeve.com>

	* texinfo.tex: Update infrastructure to Automake 1.12.3.

2012-08-14         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Fixed a math bug in the chapter on multiple
	precision floating point. Thanks to John Haque.

2012-08-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.texi: Merged discussion of numbers from Appendix C into
	the chapter on arbitrary precision arithmetic. Did some surgery
	on that chapter to organize it a little better.

2012-08-10         Arnold D. Robbins     <arnold@skeeve.com>

	* awkcard.in, gawk.1, gawk.texi: Updated. Mostly for new API stuff
	but also some other things.
	* gawk.texi (Derived Files): New node.

2012-08-01         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (install-data-hook): Install a dgawk.1 link to the