@@ -1,3 +1,8 @@
+2012-10-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (LN, install-data-hook, uninstall-hook): Removed. No
+	longer needed since dgawk and pgawk are gone.
+
 2012-10-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.texi (Glossary). Correct the full name for `ISO' per
